extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/base/tests/commentnoend.out
* errors
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/base/tests/commentnoend.ob:5:1:error: '*)' expected but end of source found

^
